<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:startDestination="@id/nav_my_music">

    <fragment
        android:id="@+id/nav_my_music"
        android:name="com.example.exercise_4_music_player.MyMusicFragment"
        android:label="@string/my_music" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.exercise_4_music_player.FavoritesFragment"
        android:label="@string/favorites" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.exercise_4_music_player.ProfileFragment"
        android:label="@string/profile" />

    <fragment
        android:id="@+id/nav_now_playing"
        android:name="com.example.exercise_4_music_player.MyMusicFragment"
        android:label="@string/now_playing" />
</navigation>